src/test/ui/const-generics/defaults/wrong-order.full.stderr
error: generic parameters with a default must be trailing
  --> $DIR/wrong-order.rs:6:10
   |
LL | struct A<T = u32, const N: usize> {
   |          ^

error: aborting due to previous error

